fix squished theme images other than home page (bug 905425)

--- a/media/css/impala/hovercards.less
+++ b/media/css/impala/hovercards.less
@@ -407,6 +407,6 @@
     display: none;
 }
 
-#homepage #featured-themes .hovercard .persona-preview img {
+.hovercard .persona-preview img {
     width: auto;
 }
